--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>
 <a name="forecast-io-scala" class="anchor" href="#forecast-io-scala"><span class="octicon octicon-link"></span></a>forecast-io-scala</h1>
 
-<p><a href="http://blog.knutwalker.de/forecast-io-wrapper/">http://blog.knutwalker.de/forecast-io-wrapper/</a></p>
+<p><a href="http://blog.knutwalker.de/forecast-io-scala/">http://blog.knutwalker.de/forecast-io-scala/</a></p>
 
 <p>Scala wrapper library for the v2 Forecast API provided by The Dark Sky Company, LLC.</p>
 
@@ -176,7 +176,7 @@ You can build the jar with <code>sbt assembly</code> and use it like so:</p>
 <h3>
 <a name="scaladoc" class="anchor" href="#scaladoc"><span class="octicon octicon-link"></span></a>Scaladoc</h3>
 
-<p>Scaladoc is available at <a href="http://blog.knutwalker.de/forecast-io-wrapper/current/">http://blog.knutwalker.de/forecast-io-wrapper/current/</a></p>
+<p>Scaladoc is available at <a href="http://blog.knutwalker.de/forecast-io-scala/current/">http://blog.knutwalker.de/forecast-io-wrapper/current/</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/knutwalker">knutwalker</a></p>
